[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycreditools"
version = "0.3.0"
description = "Runtime credit-risk engine used by the credit-agent MCP server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Matheus Pasche", email = "matheuspasche@outlook.com"},
]
keywords = [
    "credit-risk",
    "simulation",
    "policy-optimization",
    "risk-management",
    "ward-clustering",
    "information-value",
    "credit-scoring",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pyarrow>=15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pycreditools"]
